syntax = "proto3";

package pb;

import "fav_movies.proto";

option go_package = "github.com/CineDeepMatch/Backend-server/pb";

message UpdateFavMoviesRequest {
    string user_id = 1;
    repeated string movie_ids = 2;
}

message UpdateFavMoviesResponse {
    FavMovies fav_movies = 1;
}

